syntax = "proto3";

message Branch1 {
    string String = 1;
}

message Branch2 {
    uint32 UInt32 = 1;
}

message OneOf {
    oneof Messages {
        Branch1 Branch1 = 1;
        Branch2 Branch2 = 2;
    }

    oneof SecondMessage {
        Branch1 Branch3 = 3;
        Branch2 Branch4 = 4;
    }
}